# kagglebook

./: Pipfile  pyproject.toml
ch01/: ch01-01-titanic.py
ch02/: ch02-01-metrics.py
