[tool.poetry]
name = "kagglebook"
version = "0.1.0"
description = ""
authors = ["N.Fujiwara <Naoki.Fujiwara@sony.com>"]

[tool.poetry.dependencies]
python = "^3.8"
numpy = "^1.21.1"
pandas = "^1.3.1"
scikit-learn = "^0.24.2"
xgboost = "^1.4.2"

[tool.poetry.dev-dependencies]
kaggle = "^1.5.12"
pylint = "^2.9.5"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
